--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,83 @@
-.container {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+p {
+  margin: 0;
+}
+
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+button {
+  padding: 0;
+}
+
+svg {
+  display: block;
+}
+
+img {
+  display: block;
+}
+
+a {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  color: #212121;
+  text-decoration: none;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+a:hover, a:focus {
+  color: #2196f3;
+}
+
+.hero-section, .feature-section, .our-team-section, .our-client-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  font-size: 14px;
+  line-height: 1.71;
+}
+
+.feature-section__title, .our-team-section__title, .our-client-section__title {
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.feature-list__title {
+  font-weight: bold;
+  font-size: 14px;
+  letter-spacing: 0.03em;
+  line-height: 1.15;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
+.feature-list__text, .card-team__text, .footer-contact__wrapper--address, .footer-form__text {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.container, .footer__container {
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
@@ -116,7 +195,7 @@
   fill: var(--accent-blue);
 }
 
-.logo {
+.logo, .footer-contact__logo {
   color: #2196f3;
   font-family: Raleway;
   font-weight: bold;
@@ -125,15 +204,8 @@
   text-decoration: none;
 }
 
-.logo .logo__header {
+.logo .logo__header, .footer-contact__logo .logo__header {
   color: #000000;
-}
-
-.section, .hero-section, .feature-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-  font-size: 14px;
-  line-height: 1.71;
 }
 
 .hero-section {
@@ -160,7 +232,7 @@
   text-transform: uppercase;
 }
 
-.hero-section__button {
+.hero-section__btn, .modal-btn {
   background-color: #2196f3;
   font-weight: bold;
   font-size: 16px;
@@ -171,14 +243,6 @@
   border: transparent;
   border-radius: 4px;
   padding: 10px 32px;
-}
-
-.feature-section__title {
-  margin-bottom: 50px;
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
 }
 
 .feature-list {
@@ -206,17 +270,8 @@
   margin-right: 30px;
 }
 
-.feature-list__title {
-  margin-bottom: 10px;
-  font-weight: bold;
-  font-size: 14px;
-  letter-spacing: 0.03em;
-  line-height: 1.15;
-  text-transform: uppercase;
-}
-
 .feature-list__text {
-  color: #757575;
+  line-height: 1.82;
 }
 
 .our-skills-list {
@@ -246,7 +301,6 @@
   bottom: 0;
   display: block;
   padding: 27px 0;
-  margin: 0;
   text-align: center;
   background-color: rgba(47, 48, 58, 0.8);
   color: #ffffff;
@@ -255,5 +309,592 @@
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
+}
+
+.our-team-section {
+  background-color: #f5f4fa;
+}
+
+.our-team-section__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
+}
+
+.our-team-section__item {
+  background-color: #ffffff;
+  display: block;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.our-team-section__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.card-team__title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 119%;
+  letter-spacing: 0.03em;
+  padding-top: 30px;
+}
+
+.card-team__text {
+  font-size: 16px;
+  line-height: 1.19;
+  padding-top: 10px;
+  padding-bottom: 16px;
+}
+
+.social-links, .footer-social-links__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-bottom: 30px;
+}
+
+.social-links__btn, .footer-social-links__btn {
+  display: block;
+  margin-right: 10px;
+  padding: 12px;
+  color: #afb1b8;
+  background-color: #ffffff;
+  border: none;
+  border-radius: 50%;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-links__icon {
+  text-align: center;
+  fill: currentColor;
+}
+
+.social-links__btn:hover, .footer-social-links__btn:hover, .social-links__btn:focus, .footer-social-links__btn:focus {
+  background-color: #2196f3;
+  color: #ffffff;
+}
+
+.our-client-section__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.our-client-section__items {
+  padding: 16px 32px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  color: #afb1b8;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.our-client-section__items:not(:last-child) {
+  margin-right: 30px;
+}
+
+.our-client-section__items:hover, .our-client-section__items:focus {
+  color: #2196f3;
+  border: 1px solid #2196f3;
+}
+
+.our-client-section__icon {
+  fill: currentColor;
+}
+
+.our-client-section__items--one {
+  padding: 7px 33px 6px 32px;
+}
+
+.our-client-section__items--two {
+  padding: 3px 33px 5px;
+}
+
+.our-client-section__items--three {
+  padding: 8px 33px 10px 29px;
+}
+
+.our-client-section__items--four {
+  padding: 9px 11px 10px;
+}
+
+.our-client-section__items--five {
+  padding: 7px 22px 8px;
+}
+
+.our-client-section__items--six {
+  padding: 7px 6px 9px;
+}
+
+.portfolio-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  font-size: 14px;
+  line-height: 1.71;
+}
+
+.portfolio-btn-list {
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+.portfolio-btn-list__item {
+  display: inline-block;
+  letter-spacing: 0.03em;
+  -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-btn-list__item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.portfolio-btn-list__item:hover, .portfolio-btn-list__item:focus {
+  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.portfolio-btn-list__btn {
+  padding: 6px 22px;
+  border: transparent;
+  border-radius: 4px;
+  font-family: Roboto;
+  font-weight: 500;
+  background-color: #f5f4fa;
+  font-size: 16px;
+  line-height: 1.63;
+  text-align: center;
+  cursor: pointer;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-btn-list__btn:hover, .portfolio-btn-list__btn:focus {
+  background-color: #2196f3;
+  color: #ffffff;
+}
+
+.portfolio-card-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.portfolio-card-list__item:not(:nth-child(3n + 3)) {
+  margin-right: 30px;
+}
+
+.portfolio-card-list__item:not(:nth-child(n + 7)) {
+  margin-bottom: 30px;
+}
+
+.portfolio-card-list__item:hover, .portfolio-card-list__item:focus {
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.portfolio-card-wrapper {
+  background-color: #ffffff;
+  overflow: hidden;
+}
+
+.portfolio-card-wrapper__link:hover, .portfolio-card-wrapper__link:focus {
+  color: #000000;
+}
+
+.portfolio-card-wrapper__title {
+  margin-top: 20px;
+  padding-left: 24px;
+  padding-right: auto;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.portfolio-card-wrapper__text {
+  margin-top: 4px;
+  padding-bottom: 20px;
+  padding-left: 24px;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.portfolio-image-wrapper {
+  position: relative;
+}
+
+.portfolio-image-wrapper__text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  background-color: #2196f3;
+  opacity: 0.9;
+  padding: 63px 24px;
+  -webkit-transform: scaleY(0);
+          transform: scaleY(0);
+  -webkit-transform-origin: bottom;
+          transform-origin: bottom;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-image-wrapper:hover .portfolio-image-wrapper__text,
+.portfolio-image-wrapper:focus .portfolio-image-wrapper__text {
+  -webkit-transform: scaleY(1);
+          transform: scaleY(1);
+  opacity: 0.9;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.backdrop.is-hidden .modal {
+  -webkit-transform: translate(-50%, -50%) scale(0);
+          transform: translate(-50%, -50%) scale(0);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%) scale(1);
+          transform: translate(-50%, -50%) scale(1);
+  /* width: 528px;
+  height: 581px; */
+  background-color: #fff;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal__close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  padding: 9px 9px 10px 10px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: #ffffff;
+  cursor: pointer;
+}
+
+.modal__close-icon {
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal__close-icon:hover {
+  fill: #2196f3;
+}
+
+.block-form {
+  padding: 40px;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.block-form__title {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 12px;
+}
+
+.contact-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.contact-form__label, .contact-form__label--area, .contact-form__label--agreement {
+  position: relative;
+  font-size: 12px;
+  font-style: normal;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: #757575;
+  margin-bottom: 10px;
+}
+
+.contact-form__text {
+  display: block;
+  margin-bottom: 4px;
+}
+
+.contact-form__input {
+  width: 448px;
+  outline: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 11px 41px;
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.15;
+  letter-spacing: 0.01em;
+}
+
+.contact-form__icon {
+  position: absolute;
+  bottom: 14px;
+  left: 15px;
+  -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form__label:focus-within .contact-form__icon, .contact-form__label--area:focus-within .contact-form__icon, .contact-form__label--agreement:focus-within .contact-form__icon {
+  border: 1px solid #2196f3;
+  fill: #2196f3;
+  border: none;
+}
+
+.contact-form .label-form .form-input {
+  -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form__label:focus-within .contact-form__input, .contact-form__label--area:focus-within .contact-form__input, .contact-form__label--agreement:focus-within .contact-form__input {
+  border: 1px solid #2196f3;
+  border-color: color-accent;
+}
+
+.contact-form__label--area {
+  margin-bottom: 20px;
+}
+
+.contact-form__input--area {
+  width: 100%;
+  padding: 11px 15px;
+  resize: none;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+}
+
+.contact-form__label--agreement {
+  display: inline-block;
+  margin-bottom: 30px;
+  padding: 0 15px;
+}
+
+.contact-form__input--checkbox {
+  position: absolute;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
+.contact-form__input--checkbox:checked + .checkbox {
+  background-color: #2196f3;
+  background-image: url("../images/svg/iconcheck.svg");
+  background-size: contain;
+  background-origin: border-box;
+  border-color: #2196f3;
+}
+
+.contact-form__text--agreement {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  margin-left: 7px;
+}
+
+.contact-form__text--agreement-accent {
+  color: #2196f3;
+}
+
+.checkbox {
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  border: 2px solid #212121;
+  border-radius: 2px;
+}
+
+.modal-btn {
+  margin: auto;
+}
+
+.footer {
+  background-color: #2f303a;
+}
+
+.footer__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.footer-contact {
+  margin-right: 70px;
+}
+
+.footer-contact__logo {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.footer-contact__logo--footer {
+  color: #ffffff;
+}
+
+.footer-contact__wrapper--address {
+  line-height: 1.55;
+  color: #ffffff;
+  margin-bottom: 9px;
+}
+
+.footer-contact__wrapper--mail, .footer-contact__wrapper--tel {
+  display: block;
+  font-size: 14px;
+  line-height: 1.55;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-contact__wrapper--mail {
+  margin-bottom: 9px;
+}
+
+.footer-social-links {
+  padding-top: 15px;
+}
+
+.footer-social-links__title {
+  margin-bottom: 20px;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.15;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.footer-social-links__btn {
+  background-color: rgba(255, 255, 255, 0.1);
+  fill: #ffffff;
+}
+
+.footer-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  padding-top: 15px;
+  padding-bottom: 32px;
+  margin-left: 93px;
+}
+
+.footer-form__text {
+  font-weight: bold;
+  display: block;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+
+.footer-form__input {
+  outline: none;
+  width: 358px;
+  padding: 15px 16px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  background-color: transparent;
+  color: #ffffff;
+}
+
+.footer-form__label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-right: 12px;
+}
+
+.footer-form__icon {
+  display: block;
+  margin-left: 10px;
+}
+
+.footer-form__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #2196f3;
+  font-weight: bold;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  text-align: center;
+  color: #ffffff;
+  padding: 0 29px;
+  border: transparent;
+  border-radius: 4px;
+  margin-top: 36px;
 }
 /*# sourceMappingURL=main.css.map */
