--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -1,11 +1,5 @@
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-  font-size: 14px;
-  line-height: 1.71;
-}
 .hero-section {
-  @extend .section;
+  @extend %section;
   text-align: center;
   max-width: 1600px;
   margin-left: auto;
@@ -32,7 +26,7 @@
     color: $color_secondary;
     text-transform: uppercase;
   }
-  &__button {
+  &__btn {
     background-color: $color-accent;
     font-weight: bold;
     font-size: 16px;
