--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,274 @@
+/*! modern-normalize v1.0.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
+/*
+Document
+========
+*/
+/**
+Use a better box model (opinionated).
+*/
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+/**
+Use a more readable tab size (opinionated).
+*/
+:root {
+  -moz-tab-size: 4;
+  -o-tab-size: 4;
+     tab-size: 4;
+}
+
+/**
+1. Correct the line height in all browsers.
+2. Prevent adjustments of font size after orientation changes in iOS.
+*/
+html {
+  line-height: 1.15;
+  /* 1 */
+  -webkit-text-size-adjust: 100%;
+  /* 2 */
+}
+
+/*
+Sections
+========
+*/
+/**
+Remove the margin in all browsers.
+*/
+body {
+  margin: 0;
+}
+
+/**
+Improve consistency of default fonts in all browsers. (https://github.com/sindresorhus/modern-normalize/issues/3)
+*/
+body {
+  font-family: system-ui, -apple-system, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+}
+
+/*
+Grouping content
+================
+*/
+/**
+1. Add the correct height in Firefox.
+2. Correct the inheritance of border color in Firefox. (https://bugzilla.mozilla.org/show_bug.cgi?id=190655)
+*/
+hr {
+  height: 0;
+  /* 1 */
+  color: inherit;
+  /* 2 */
+}
+
+/*
+Text-level semantics
+====================
+*/
+/**
+Add the correct text decoration in Chrome, Edge, and Safari.
+*/
+abbr[title] {
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
+}
+
+/**
+Add the correct font weight in Edge and Safari.
+*/
+b,
+strong {
+  font-weight: bolder;
+}
+
+/**
+1. Improve consistency of default fonts in all browsers. (https://github.com/sindresorhus/modern-normalize/issues/3)
+2. Correct the odd 'em' font sizing in all browsers.
+*/
+code,
+kbd,
+samp,
+pre {
+  font-family: ui-monospace, SFMono-Regular, Consolas, 'Liberation Mono', Menlo, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */
+}
+
+/**
+Add the correct font size in all browsers.
+*/
+small {
+  font-size: 80%;
+}
+
+/**
+Prevent 'sub' and 'sup' elements from affecting the line height in all browsers.
+*/
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+/*
+Tabular data
+============
+*/
+/**
+1. Remove text indentation from table contents in Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=999088, https://bugs.webkit.org/show_bug.cgi?id=201297)
+2. Correct table border color inheritance in all Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=935729, https://bugs.webkit.org/show_bug.cgi?id=195016)
+*/
+table {
+  text-indent: 0;
+  /* 1 */
+  border-color: inherit;
+  /* 2 */
+}
+
+/*
+Forms
+=====
+*/
+/**
+1. Change the font styles in all browsers.
+2. Remove the margin in Firefox and Safari.
+*/
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  /* 1 */
+  font-size: 100%;
+  /* 1 */
+  line-height: 1.15;
+  /* 1 */
+  margin: 0;
+  /* 2 */
+}
+
+/**
+Remove the inheritance of text transform in Edge and Firefox.
+1. Remove the inheritance of text transform in Firefox.
+*/
+button,
+select {
+  /* 1 */
+  text-transform: none;
+}
+
+/**
+Correct the inability to style clickable types in iOS and Safari.
+*/
+button,
+[type='button'],
+[type='reset'],
+[type='submit'] {
+  -webkit-appearance: button;
+}
+
+/**
+Remove the inner border and padding in Firefox.
+*/
+::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+/**
+Restore the focus styles unset by the previous rule.
+*/
+:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+/**
+Remove the additional ':invalid' styles in Firefox.
+See: https://github.com/mozilla/gecko-dev/blob/2f9eacd9d3d995c937b4251a5557d95d494c9be1/layout/style/res/forms.css#L728-L737
+*/
+:-moz-ui-invalid {
+  box-shadow: none;
+}
+
+/**
+Remove the padding so developers are not caught out when they zero out 'fieldset' elements in all browsers.
+*/
+legend {
+  padding: 0;
+}
+
+/**
+Add the correct vertical alignment in Chrome and Firefox.
+*/
+progress {
+  vertical-align: baseline;
+}
+
+/**
+Correct the cursor style of increment and decrement buttons in Safari.
+*/
+::-webkit-inner-spin-button,
+::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/**
+1. Correct the odd appearance in Chrome and Safari.
+2. Correct the outline style in Safari.
+*/
+[type='search'] {
+  -webkit-appearance: textfield;
+  /* 1 */
+  outline-offset: -2px;
+  /* 2 */
+}
+
+/**
+Remove the inner padding in Chrome and Safari on macOS.
+*/
+::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+1. Correct the inability to style clickable types in iOS and Safari.
+2. Change font properties to 'inherit' in Safari.
+*/
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  /* 1 */
+  font: inherit;
+  /* 2 */
+}
+
+/*
+Interactive
+===========
+*/
+/*
+Add the correct display in Chrome and Safari.
+*/
+summary {
+  display: list-item;
+}
+
 h1,
 h2,
 h3,
@@ -44,7 +315,7 @@ a:hover, a:focus {
   color: #2196f3;
 }
 
-.hero-section, .feature-section, .our-team-section, .our-client-section {
+.hero-section, .feature-section, .our-client-section {
   padding-top: 94px;
   padding-bottom: 94px;
   font-size: 14px;
@@ -68,8 +339,8 @@ a:hover, a:focus {
   margin-bottom: 10px;
 }
 
-.feature-list__text, .card-team__text, .footer-contact__wrapper--address, .footer-form__text {
-  font-family: Roboto;
+.feature-list__text, .card-team__text, .footer-contact__wrapper--address, .footer-contact__wrapper--mail, .footer-contact__wrapper--tel, .footer-form__text {
+  font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -92,6 +363,13 @@ a:hover, a:focus {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.section, .our-team-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  font-size: 14px;
+  line-height: 1.71;
 }
 
 .page-header {
@@ -133,6 +411,10 @@ a:hover, a:focus {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.site-nav__link:hover, .site-nav__link:focus {
+  color: #2196f3;
+}
+
 .site-nav__link.current {
   position: relative;
   color: #2196f3;
@@ -148,10 +430,6 @@ a:hover, a:focus {
   position: absolute;
   left: 0;
   bottom: 0;
-}
-
-.site-nav__link:hover, .site-nav__link:focus {
-  color: #2196f3;
 }
 
 .contact-nav {
@@ -183,6 +461,11 @@ a:hover, a:focus {
   text-decoration: none;
 }
 
+.contact-nav__link:hover, .contact-nav__link:focus {
+  color: #2196f3;
+  fill: var(--accent-blue);
+}
+
 .contact-nav__icon {
   margin-right: 10px;
   fill: currentColor;
@@ -190,14 +473,9 @@ a:hover, a:focus {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-nav__link:hover, .contact-nav__link:focus {
-  color: #2196f3;
-  fill: var(--accent-blue);
-}
-
 .logo, .footer-contact__logo {
   color: #2196f3;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: bold;
   font-size: 26px;
   line-height: 1.19;
@@ -225,6 +503,7 @@ a:hover, a:focus {
 
 .hero-section__title {
   margin: 0 0 30px;
+  font-family: Roboto, sans-serif;
   font-weight: 900;
   font-size: 44px;
   line-height: 137%;
@@ -242,6 +521,7 @@ a:hover, a:focus {
   width: 200px;
   border: transparent;
   border-radius: 4px;
+  cursor: pointer;
   padding: 10px 32px;
 }
 
@@ -367,18 +647,19 @@ a:hover, a:focus {
   background-color: #ffffff;
   border: none;
   border-radius: 50%;
+  cursor: pointer;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social-links__icon {
-  text-align: center;
-  fill: currentColor;
 }
 
 .social-links__btn:hover, .footer-social-links__btn:hover, .social-links__btn:focus, .footer-social-links__btn:focus {
   background-color: #2196f3;
   color: #ffffff;
+}
+
+.social-links__icon {
+  text-align: center;
+  fill: currentColor;
 }
 
 .our-client-section__list {
@@ -395,17 +676,18 @@ a:hover, a:focus {
   border: 1px solid #afb1b8;
   border-radius: 4px;
   color: #afb1b8;
+  cursor: pointer;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.our-client-section__items:not(:last-child) {
-  margin-right: 30px;
 }
 
 .our-client-section__items:hover, .our-client-section__items:focus {
   color: #2196f3;
   border: 1px solid #2196f3;
+}
+
+.our-client-section__items:not(:last-child) {
+  margin-right: 30px;
 }
 
 .our-client-section__icon {
@@ -455,10 +737,7 @@ a:hover, a:focus {
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio-btn-list__item:not(:last-child) {
-  margin-right: 8px;
+  cursor: pointer;
 }
 
 .portfolio-btn-list__item:hover, .portfolio-btn-list__item:focus {
@@ -466,11 +745,15 @@ a:hover, a:focus {
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+.portfolio-btn-list__item:not(:last-child) {
+  margin-right: 8px;
+}
+
 .portfolio-btn-list__btn {
   padding: 6px 22px;
   border: transparent;
   border-radius: 4px;
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-weight: 500;
   background-color: #f5f4fa;
   font-size: 16px;
@@ -564,8 +847,8 @@ a:hover, a:focus {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-image-wrapper:hover .portfolio-image-wrapper__text,
-.portfolio-image-wrapper:focus .portfolio-image-wrapper__text {
+.portfolio-card-wrapper:hover .portfolio-image-wrapper__text,
+.portfolio-card-wrapper:focus .portfolio-image-wrapper__text {
   -webkit-transform: scaleY(1);
           transform: scaleY(1);
   opacity: 0.9;
@@ -685,30 +968,28 @@ a:hover, a:focus {
   font-size: 14px;
   line-height: 1.15;
   letter-spacing: 0.01em;
+  -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-form__icon {
   position: absolute;
   bottom: 14px;
   left: 15px;
-  -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-form__label:focus-within .contact-form__icon, .contact-form__label--area:focus-within .contact-form__icon, .contact-form__label--agreement:focus-within .contact-form__icon {
-  border: 1px solid #2196f3;
   fill: #2196f3;
-  border: none;
-}
-
-.contact-form .label-form .form-input {
-  -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-form__label:focus-within .contact-form__input, .contact-form__label--area:focus-within .contact-form__input, .contact-form__label--agreement:focus-within .contact-form__input {
   border: 1px solid #2196f3;
-  border-color: color-accent;
+}
+
+.contact-form__label--area:focus-within .contact-form__input--area {
+  border: 1px solid #2196f3;
 }
 
 .contact-form__label--area {
@@ -722,6 +1003,11 @@ a:hover, a:focus {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
+}
+
+.contact-form__label--area:focus-within .contact-form__input--area {
+  outline: none;
+  border: 1px solid #2196f3;
 }
 
 .contact-form__label--agreement {
@@ -895,6 +1181,7 @@ a:hover, a:focus {
   padding: 0 29px;
   border: transparent;
   border-radius: 4px;
+  cursor: pointer;
   margin-top: 36px;
 }
 /*# sourceMappingURL=main.css.map */
