--- a/sass/components/_our-team-section.scss
+++ b/sass/components/_our-team-section.scss
@@ -1,5 +1,6 @@
+
 .our-team-section {
-  @extend %section;
+  @extend .section;
   background-color: $secondary-background;
   &__title {
     @extend %title;
