--- a/sass/components/_placeholder.scss
+++ b/sass/components/_placeholder.scss
@@ -22,7 +22,7 @@
   margin-bottom: 10px;
 }
 %text {
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
