--- a/sass/components/_portfolio-section.scss
+++ b/sass/components/_portfolio-section.scss
@@ -13,20 +13,27 @@
     display: inline-block;
     letter-spacing: 0.03em;
     transition: box-shadow $animation;
+    cursor: pointer;
+
+    &:hover,
+    &:focus {
+      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+        0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    }
   }
   &__item:not(:last-child) {
     margin-right: 8px;
   }
-  &__item:hover,
-  &__item:focus {
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-      0px 2px 2px rgba(0, 0, 0, 0.12);
-  }
+  // &__item:hover,
+  // &__item:focus {
+  //   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+  //     0px 2px 2px rgba(0, 0, 0, 0.12);
+  // }
   &__btn {
     padding: 6px 22px;
     border: transparent;
     border-radius: 4px;
-    font-family: Roboto;
+    font-family: Roboto, sans-serif;
     font-weight: 500;
     background-color: $secondary-background;
     font-size: 16px;
@@ -34,10 +41,16 @@
     text-align: center;
     cursor: pointer;
     transition: color $animation, background-color $animation;
+
+    &:hover,
+    &:focus {
+      background-color: $color-accent;
+      color: $color-secondary;
+    }
   }
-  &__btn:hover,
-  &__btn:focus {
-    background-color: $color-accent;
-    color: $color-secondary;
-  }
+  // &__btn:hover,
+  // &__btn:focus {
+  //   background-color: $color-accent;
+  //   color: $color-secondary;
+  // }
 }
