--- a/sass/components/_social-links.scss
+++ b/sass/components/_social-links.scss
@@ -11,16 +11,22 @@
     background-color: $primary-background;
     border: none;
     border-radius: 50%;
-    // cursor: pointer;
+    cursor: pointer;
     transition: color $animation, background-color $animation;
+
+    &:hover,
+    &:focus {
+      background-color: $color_accent;
+      color: $color_secondary;
+    }
   }
   &__icon {
     text-align: center;
     fill: currentColor;
   }
-  &__btn:hover,
-  &__btn:focus {
-    background-color: $color_accent;
-    color: $color_secondary;
-  }
+  // &__btn:hover,
+  // &__btn:focus {
+  //   background-color: $color_accent;
+  //   color: $color_secondary;
+  // }
 }
