--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -9,7 +9,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url('../../images/backgroundhero.png');
+    url('../images/backgroundhero.png');
 
   background-repeat: no-repeat;
   background-position: 50% 50%;
