--- a/css/main.css
+++ b/css/main.css
@@ -339,7 +339,7 @@ a:hover, a:focus {
   margin-bottom: 10px;
 }
 
-.feature-list__text, .card-team__text, .footer-contact__wrapper--address, .footer-contact__wrapper--mail, .footer-contact__wrapper--tel, .footer-form__text {
+.feature-list__text, .card-team__text, .footer-contact__wrapper--address, .footer-contact__wrapper--mail, .footer-contact__wrapper--tel, .footer-form__text, .footer-form__input, .footer-form__btn, .footer-form__btn--text {
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -1011,7 +1011,12 @@ a:hover, a:focus {
 }
 
 .contact-form__label--agreement {
-  display: inline-block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-bottom: 30px;
   padding: 0 15px;
 }
@@ -1138,6 +1143,7 @@ a:hover, a:focus {
 }
 
 .footer-form__input {
+  font-size: 16px;
   outline: none;
   width: 358px;
   padding: 15px 16px;
@@ -1183,5 +1189,14 @@ a:hover, a:focus {
   border-radius: 4px;
   cursor: pointer;
   margin-top: 36px;
+}
+
+.footer-form__btn--text {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  text-align: center;
+  color: #ffffff;
 }
 /*# sourceMappingURL=main.css.map */
