--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -13,6 +13,8 @@
     margin-bottom: 20px;
   }
   &__input {
+    @extend %text;
+    font-size: 16px;
     outline: none;
     width: 358px;
     padding: 15px 16px;
@@ -31,6 +33,7 @@
     margin-left: 10px;
   }
   &__btn {
+    @extend %text;
     display: flex;
     align-items: center;
     background-color: $color-accent;
@@ -46,5 +49,14 @@
     border-radius: 4px;
     cursor: pointer;
     margin-top: 36px;
+  }
+  &__btn--text {
+    @extend %text;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    text-align: center;
+    color: $color-secondary;
   }
 }
