--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -54,10 +54,9 @@
   &__label:focus-within &__icon {
     fill: $color-accent;
   }
-  
+
   &__label:focus-within &__input {
     border: 1px solid $color-accent;
-    
   }
   &__label--area:focus-within &__input--area {
     border: 1px solid $color-accent;
@@ -76,7 +75,6 @@
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.01em;
-    
   }
   &__label--area:focus-within &__input--area {
     outline: none;
@@ -85,7 +83,8 @@
   }
   &__label--agreement {
     @extend .contact-form__label;
-    display: inline-block;
+    display: flex;
+    align-items: center;
     margin-bottom: 30px;
     padding: 0 15px;
   }
