--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,7 +8,7 @@
 @import 'components/logo';
 @import 'components/hero-section';
 @import 'components/feature-section';
-@import 'components/_our-team-section.scss';
+@import 'components/our-team-section';
 @import 'components/card-team';
 @import 'components/social-links';
 @import 'components/our-client-section';
